// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/manager/nvm/extract extractPackageFile() returns a result 1`] = `
Array [
  Object {
    "currentValue": "8.4.0",
    "datasource": "node",
    "depName": "node",
    "lookupName": "nodejs/node",
  },
]
`;

exports[`lib/manager/nvm/extract extractPackageFile() skips non-pinned 1`] = `
Array [
  Object {
    "currentValue": "8.4",
    "datasource": "node",
    "depName": "node",
    "lookupName": "nodejs/node",
    "skipReason": "unsupported-version",
  },
]
`;
